--- a/index.html
+++ b/index.html
@@ -1,80 +1,92 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en-US" xml:lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-  <meta charset='utf-8'>
+<title>jagtesh chadha</title>
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/reset-fonts/reset-fonts.css"> 
+<style type="text/css">
+/* if you're checking my coding skills, i know the following should be in a static file in production. but this is my playground. i can do wha-t-eve-r. grrr. */
+body{font-family:verdana,"lucida sans unicode","trebuchet ms",helvetica,arial,sans-serif;color:#444;}
+div#page {width:800px;height:100%;margin:0 auto;padding:0;}
+div#nav {text-align:right;}
+div#nav ul {list-style:none;}
+div#nav li {display:inline;margin-right:25px;}
+div#nav a {color:maroon;text-decoration:none;padding:1px 3px;font-weight:bold;}
+div#nav a:hover {color:white;background:maroon;}
+div#header, div#content, div#footer {padding:5px;}
+div#header {border-bottom: 2px solid #eee;}
+div#content {}
+div#content a {color:maroon;text-decoration:none;padding:1px 3px;}
+div#content a:hover {text-decoration:underline;}
+div#footer {border-top: 2px solid #eee;}
 
-  <title>jagtesh/jagteshchadha.com @ GitHub</title>
+div#title {font-size:185px;color:#eee;padding-bottom:20px;}
+div#sub-title {color:#aaa;text-align:right;}
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #ffffff;
-      font-family: "Helvetica,Arial,FreeSans";
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #000000; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #000000; }
-    h3 { text-align: center; color: #000000; }
-    a { color: #000000; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+/* footer */
+div#footer {text-align:center;font-size:80%;color:#aaa;}
+.cen {margin-bottom:10px;}
+div.ctl, div.ctr {margin:20px 0 10px 0;}
+div.ctl {text-align:left;}
+div.ctr {text-align:right;}
+div.cb {padding-left:10px;}
+span.ct {padding:2px 10px;background:maroon;color:white;font-weight:bold;font-size:110%;}
+span.ct {padding:2px 10px;background:maroon;color:white;font-weight:bold;font-size:110%;}
+
+strong {color:maroon;border-bottom:1px dotted #ccc;}
+</style>
 </head>
 
 <body>
-  <a href="http://github.com/jagtesh/jagteshchadha.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<div id="page">
+<div id="header">
+<div id="nav">
 
-  <div id="container">
+<ul>
+<li><a href="http://www.linkedin.com/in/jagtesh">linked in</a></li>
+<li><a href="http://www.twitter.com/jagtesh">twitter</a></li>
+<li><a href="http://lite.facebook.com/jagtesh">facebook</a></li>
+<li><a href="http://log.jagtesh.com/">tumblog</a></li>
+<li><a href="mailto:contact@jagteshchadha.com">email</a></li>
 
-    <div class="download">
-      <a href="http://github.com/jagtesh/jagteshchadha.com/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/jagtesh/jagteshchadha.com/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+</ul>
+</div>
+</div>
+<div id="content">
+<div id="title">.jagtesh</div>
+<div class="content-entry">
+<div class="ctl"><span class="ct">.intro</span></div>
+<div class="cb">
 
-    <h1><a href="http://github.com/jagtesh/jagteshchadha.com">jagteshchadha.com</a>
-      <span class="small">by <a href="http://github.com/jagtesh">jagtesh</a></span></h1>
+hi.
+<div style="padding-left:10px">i'm <strong>jagtesh</strong>.</div>
+<div style="padding-left:20px">a web-app <strong>designer</strong> and <strong>developer</strong>.</div>
+<div style="padding-left:30px">i specialize in developing <strong>large-scale</strong> <strong>social</strong> <strong>web-apps</strong> based on the <strong>lamp</strong> stack.</div>
 
-    <div class="description">
-      jagteshchadha.com
-    </div>
-
-    <p>Landing page for http://jagteshchadha.com</p><h2>License</h2>
-<p>Copyright 2011, Jagtesh Chadha</p>
-<h2>Authors</h2>
-<p>Jagtesh Chadha      </p>
-<h2>Contact</h2>
-<p>Jagtesh Chadha (jagtesh@gmail.com)<br/>      </p>
+<div style="padding-left:40px">shortly, i'll start taking projects in <strong>django</strong> and <strong>rails</strong>.</div>
+<div style="padding-left:50px">srsly.</div>
+<div style="padding-left:60px">kthxbye.</div>
+</div>
+</div>
 
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/jagtesh/jagteshchadha.com/zipball/master">zip</a> or
-      <a href="http://github.com/jagtesh/jagteshchadha.com/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/jagtesh/jagteshchadha.com</pre>
-    </p>
+<div class="content-entry">
+<div class="ctl"><span class="ct">.resume</span></div>
+<div class="cb">[<a href="http://dl.dropbox.com/u/1586452/jagtesh-chadha-resume-oct-2010.pdf">pdf</a>]</div>
+</div>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/jagtesh/jagteshchadha.com">jagtesh/jagteshchadha.com</a>
-    </div>
+<div class="content-entry">
+<div class="ctl"><span class="ct">.contact</span></div>
 
-  </div>
+<div class="cb">mail me: <a href="mailto:contact@jagteshchadha.com">contact@jagteshchadha.com</a></div>
+</div>
+</div>
+<div id="footer">
+<p>&copy; 2010, Jagtesh Chadha. All Rights Reserved.</p>
+</div>
+</div>
 
-  <script type="text/javascript">
+<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
