--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ strong {color:maroon;border-bottom:1px dotted #ccc;}
 <div id="nav">
 
 <ul>
+<li><a href="http://www.grep42.com">grep42</a></li>
 <li><a href="http://www.linkedin.com/in/jagtesh">linked in</a></li>
 <li><a href="http://www.twitter.com/jagtesh">twitter</a></li>
 <li><a href="http://lite.facebook.com/jagtesh">facebook</a></li>
