Fixed facebook link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ strong {color:maroon;border-bottom:1px dotted #ccc;}
 <li><a href="http://www.grep42.com">grep42</a></li>
 <li><a href="http://www.linkedin.com/in/jagtesh">linked in</a></li>
 <li><a href="http://www.twitter.com/jagtesh">twitter</a></li>
-<li><a href="http://lite.facebook.com/jagtesh">facebook</a></li>
+<li><a href="http://www.facebook.com/jagtesh">facebook</a></li>
 <li><a href="http://log.jagtesh.com/">tumblog</a></li>
 <li><a href="mailto:contact@jagteshchadha.com">email</a></li>
 
