--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>jagtesh chadha</title>
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/reset-fonts/reset-fonts.css"> 
 <style type="text/css">
-/* if you're checking my coding skills, i know the following should be in a static file in production. but this is my playground. i can do wha-t-eve-r. grrr. */
 body{font-family:verdana,"lucida sans unicode","trebuchet ms",helvetica,arial,sans-serif;color:#444;}
 div#page {width:800px;height:100%;margin:0 auto;padding:0;}
 div#nav {text-align:right;}
@@ -39,52 +38,36 @@ strong {color:maroon;border-bottom:1px dotted #ccc;}
 
 <body>
 <div id="page">
-<div id="header">
-<div id="nav">
-
-<ul>
-<li><a href="http://www.grep42.com">grep42</a></li>
-<li><a href="http://www.linkedin.com/in/jagtesh">linked in</a></li>
-<li><a href="http://www.twitter.com/jagtesh">twitter</a></li>
-<li><a href="http://www.facebook.com/jagtesh">facebook</a></li>
-<li><a href="http://log.jagtesh.com/">tumblog</a></li>
-<li><a href="mailto:contact@jagteshchadha.com">email</a></li>
-
-</ul>
-</div>
-</div>
-<div id="content">
-<div id="title">.jagtesh</div>
-<div class="content-entry">
-<div class="ctl"><span class="ct">.intro</span></div>
-<div class="cb">
-
-hi.
-<div style="padding-left:10px">i'm <strong>jagtesh</strong>.</div>
-<div style="padding-left:20px">a web-app <strong>designer</strong> and <strong>developer</strong>.</div>
-<div style="padding-left:30px">i specialize in developing <strong>large-scale</strong> <strong>social</strong> <strong>web-apps</strong> based on the <strong>lamp</strong> stack.</div>
-
-<div style="padding-left:40px">shortly, i'll start taking projects in <strong>django</strong> and <strong>rails</strong>.</div>
-<div style="padding-left:50px">srsly.</div>
-<div style="padding-left:60px">kthxbye.</div>
-</div>
+  <div id="header">
+    <div id="nav">
+      <ul>
+        <li><a href="http://www.nutritionrank.com">nutrition rank</a></li>
+        <li><a href="http://www.grep42.com">grep42</a></li>
+        <li><a href="http://www.linkedin.com/in/jagtesh">linked in</a></li>
+        <li><a href="http://www.twitter.com/jagtesh">twitter</a></li>
+        <li><a href="http://www.facebook.com/jagtesh">facebook</a></li>
+        <li><a href="mailto:contact@jagteshchadha.com">email</a></li>
+      </ul>
+    </div>
+  </div>
+  <div id="content">
+    <div id="title">.jagtesh</div>
+  </div>
+  
+  
+  <div class="content-entry">
+    <div class="ctl"><span class="ct">.resume</span></div>
+    <div class="cb">[<a href="http://in.linkedin.com/in/jagtesh">linked in</a>]</div>
+  </div>
+  
+  <div class="content-entry">
+    <div class="ctl"><span class="ct">.contact</span></div>
+    <div class="cb">mail me: <a href="mailto:contact@jagteshchadha.com">contact@jagteshchadha.com</a></div>
+  </div>
 </div>
 
-
-<div class="content-entry">
-<div class="ctl"><span class="ct">.resume</span></div>
-<div class="cb">[<a href="http://dl.dropbox.com/u/1586452/jagtesh-chadha-resume-oct-2010.pdf">pdf</a>]</div>
-</div>
-
-<div class="content-entry">
-<div class="ctl"><span class="ct">.contact</span></div>
-
-<div class="cb">mail me: <a href="mailto:contact@jagteshchadha.com">contact@jagteshchadha.com</a></div>
-</div>
-</div>
 <div id="footer">
-<p>&copy; 2010, Jagtesh Chadha. All Rights Reserved.</p>
-</div>
+  <p>&copy; 2012, Jagtesh Chadha. All Rights Reserved.</p>
 </div>
 
 <script type="text/javascript">
