--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ div#nav {text-align:right;}
 div#nav ul {list-style:none;}
 div#nav li {display:inline;margin-right:25px;}
 div#nav a {color:maroon;text-decoration:none;padding:1px 3px;font-weight:bold;}
-div#nav a:hover {color:white;background:maroon;}
+div#nav a:hover {color:white;background:#ADD8E6;}
 div#header, div#content, div#footer {padding:5px;}
 div#header {border-bottom: 2px solid #eee;}
 div#content {}
-div#content a {color:maroon;text-decoration:none;padding:1px 3px;}
+div#content a {color:#ADD8E6;text-decoration:none;padding:1px 3px;}
 div#content a:hover {text-decoration:underline;}
 div#footer {border-top: 2px solid #eee;}
 
@@ -29,10 +29,10 @@ div.ctl, div.ctr {margin:20px 0 10px 0;}
 div.ctl {text-align:left;}
 div.ctr {text-align:right;}
 div.cb {padding-left:10px;}
-span.ct {padding:2px 10px;background:maroon;color:white;font-weight:bold;font-size:110%;}
-span.ct {padding:2px 10px;background:maroon;color:white;font-weight:bold;font-size:110%;}
+span.ct {padding:2px 10px;background:#ADD8E6;color:white;font-weight:bold;font-size:110%;}
+span.ct {padding:2px 10px;background:#ADD8E6;color:white;font-weight:bold;font-size:110%;}
 
-strong {color:maroon;border-bottom:1px dotted #ccc;}
+strong {color:#ADD8E6;border-bottom:1px dotted #ccc;}
 </style>
 </head>
 
