--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div#page {width:800px;height:100%;margin:0 auto;padding:0;}
 div#nav {text-align:right;}
 div#nav ul {list-style:none;}
 div#nav li {display:inline;margin-right:25px;}
-div#nav a {color:maroon;text-decoration:none;padding:1px 3px;font-weight:bold;}
+div#nav a {color:#ADD8E6;text-decoration:none;padding:1px 3px;font-weight:bold;}
 div#nav a:hover {color:white;background:#ADD8E6;}
 div#header, div#content, div#footer {padding:5px;}
 div#header {border-bottom: 2px solid #eee;}
