--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
 <title>jagtesh chadha</title>
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/reset-fonts/reset-fonts.css"> 
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/reset-fonts/reset-fonts.css">
+<link href='http://fonts.googleapis.com/css?family=Habibi' rel='stylesheet' type='text/css'>
 <style type="text/css">
-body{font-family:verdana,"lucida sans unicode","trebuchet ms",helvetica,arial,sans-serif;color:#444;}
+body{font-family:Habibi;color:#444;}
 div#page {width:800px;height:100%;margin:0 auto;padding:0;}
 div#nav {text-align:right;}
 div#nav ul {list-style:none;}
