Fixed spelling typo

--- a/section/_home.html
+++ b/section/_home.html
@@ -4,5 +4,5 @@
 <h1>Hi! I'm Jagtesh Chadha</h1>
 <h4>I &hearts; Creating Products</h4>
 <br/>
-<p>I love the challenege of working on complex architectures involving bleeding edge technologies at massive scales. Enabling these to become more elegant and simple while improving their performance provides me with immense satisfaction.</p>
+<p>I love the challenge of working on complex architectures involving bleeding edge technologies at massive scales. Enabling these to become more elegant and simple while improving their performance provides me with immense satisfaction.</p>
 <p>I've been a core team member of several projects including NutritionRank, Age of Heroes, Enjyn and Grep42, to name a few. You can find more details on these projects in the <a href="#projects" onclick="openSection('projects')">projects</a> section or in my <a href="#resume" onclick="openSection('resume')">resume</a>.</p>
