Removed preview link due to a sub-par preview experience

--- a/section/_resume.html
+++ b/section/_resume.html
@@ -1,7 +1,5 @@
 <h1>Le resume</h1>
 <br/>
 <p>
-  <a href="https://dl.dropbox.com/s/qwojaraicgwmbw0/Jagtesh-Chadha-Resume-TLDR.pdf?dl=1" title="Download">[download]</a
->
-  <a href="https://www.dropbox.com/s/qwojaraicgwmbw0/Jagtesh-Chadha-Resume-TLDR.pdf?m" title="Preview">[preview]</a>
+  <a href="https://dl.dropbox.com/s/qwojaraicgwmbw0/Jagtesh-Chadha-Resume-TLDR.pdf?dl=1" title="Download">Download PDF</a>
 </p>
