--- a/section/_projects.html
+++ b/section/_projects.html
@@ -1,21 +1,8 @@
-<h1>Le projects &amp; 'folio</h1>
+<h1>Old Projects</h1>
 <br/>
 
-<h3><a href="http://grep42.com">Grep42</a></h3>
+<h3>Grep42</h3>
 <p>A freelance work search engine that is updated every 15 mins. Currently shows jobs sources from Elance and oDesk. I came up with the concept, then designed and developed it.</p>
-<br/>
-
-<h3><a href="http://nutritionrank.com">NutritionRank</a></h3>
-<p>"A food site that aims to quantify healthy eating" &ndash; <a href="http://www.businessweek.com/articles/2012-06-25/a-food-site-that-aims-to-quantify-healthy-eating">Business Week</a></p>
-<p>Contributed to the initial concept and features. Managed the project from inception. Virtually wrote the complete knowledge backend and contributed significantly to its front-end.</p>
-<br/>
-
-<h3><a href="http://m.ifood.tv">iFood.tv Mobile</a></h3>
-<p>HTML5 based mobile version of iFood.tv. Lead project design and development from scratch.</p>
-<br/>
-
-<h3><a href="http://iptv.ifood.tv">iFood.tv (for Google TV)</a></h3>
-<p>iFood.tv for couch surfing. Developed for Google TV and Chrome browser using only HTML5, CSS3 and JavaScript.</p>
 <br/>
 
 <h3><a href="http://code.google.com/p/flickd/">FlickD!</a></h3>
