--- a/section/_home.html
+++ b/section/_home.html
@@ -2,8 +2,4 @@
 <img src="/assets/img/portrait-48x48.png" style="float: left;padding: 6px 10px 0 0;width: 48px;height: 48px;" alt="Jagtesh Chadha" title="Jagtesh Chadha">
 
 <h1>Hi! I'm Jagtesh Chadha</h1>
-<h4>I &hearts; Creating Products</h4>
-<br/>
-<p>I love the challenge of working on complex architectures involving bleeding edge technologies at massive scales. Enabling these to become more elegant and simple while improving their performance provides me with immense satisfaction.</p>
-<p>I've been a core team member of several projects including NutritionRank, Age of Heroes, Enjyn and Grep42, to name a few. You can find more details on these projects in the <a href="#projects" onclick="openSection('projects')">projects</a> section or in my <a href="#resume" onclick="openSection('resume')">resume</a>.</p>
-<p>FYI, this site is fully responsive and was created using Twitter Bootstrap, jQuery and its hosted on GitHub.</p>
+<h4>I &hearts; building things. From scratch. To scale. For masses.</h4>
