Woops. Put back github link and removed grep42.com

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		      
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="http://grep42.com">Grep42</a></li>
+              <li><a href="http://github.com/jagtesh">GitHub</a></li>
               <li class="divider-vertical">§</li>
               <li><a href="http://facebook.com/jagtesh">Facebook</a></li>
               <li><a href="http://twitter.com/jagtesh">Twitter</a></li>
