--- a/section/_resume.html
+++ b/section/_resume.html
@@ -1,5 +1,5 @@
-<h1>Le resume</h1>
+<h1>Resume</h1>
 <br/>
 <p>
-  <a href="https://dl.dropbox.com/s/qwojaraicgwmbw0/Jagtesh-Chadha-Resume-TLDR.pdf?dl=1" title="Download">Download PDF</a>
+  <a href="https://ca.linkedin.com/in/jagtesh" title="LinkedIn">LinkedIn</a>
 </p>
