--- a/section/_home.html
+++ b/section/_home.html
@@ -1,5 +1,5 @@
 <!-- This should show right next to the name and caption -->
 <img src="/assets/img/portrait-48x48.png" style="float: left;padding: 6px 10px 0 0;width: 48px;height: 48px;" alt="Jagtesh Chadha" title="Jagtesh Chadha">
 
-<h1>Hi! I'm Jagtesh Chadha</h1>
-<h4>I &hearts; building things. From scratch. To scale. For masses.</h4>
+<h1>Hi! I'm Jag</h1>
+<h4>I &hearts; solving real problems.</h4>
