--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu+Condensed|Ubuntu">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
