--- a/section/_about.html
+++ b/section/_about.html
@@ -1,11 +1,11 @@
-<h1>Le about</h1>
+<h1>About</h1>
 
 <p>
   <ul>
-    <li>An engineer by degree and a startup enabler by choice. I've been starting things up ever since I was in my early teens.</li>
-    <li>Most recently, I was behind the development and success of some key products at Future Today, Inc.</li>
-    <li>When I'm not working, I'm either exploring some place new with the love of my life or following the latest in business and technology.</li>
-    <li>In another life, I used to compose music and write songs.</li>
+    <li>I've successfully helped several startups launch and scale.</li>
+    <li>Worked in various industries, including Marketing Technology, Games, Media, Nutrition &amp; Health.</li>
+    <li>Held various role: Engineer, Manager, Architect, Project Coordinator.</li> 
+    <li>When I'm not working, I'm most likely travelling with my lovely wife.</li>
+    <li>I follow a strong passion for music. I consider myself an amateur song-writer and composer.</li>
   </ul>
 </p>
-<br/>
