--- a/section/_about.html
+++ b/section/_about.html
@@ -3,8 +3,8 @@
 <p>
   <ul>
     <li>I've successfully helped several startups launch and scale.</li>
-    <li>Worked in various industries, including Marketing Technology, Games, Media, Nutrition &amp; Health.</li>
-    <li>Held various role: Engineer, Manager, Architect, Project Coordinator.</li> 
+    <li>Worked in various industries including: Marketing Technology, Games, Media, Nutrition &amp; Health, Politics &amp; Governance.</li>
+    <li>Held various roles: Engineer, Manager, Architect, Project Coordinator.</li> 
     <li>When I'm not working, I'm most likely travelling with my lovely wife.</li>
     <li>I follow a strong passion for music. I consider myself an amateur song-writer and composer.</li>
   </ul>
