--- a/section/_home.html
+++ b/section/_home.html
@@ -1,5 +1,5 @@
 <!-- This should show right next to the name and caption -->
-<img src="/assets/img/portrait-48x48.png" style="float: left;padding: 6px 10px 0 0;width: 48px;height: 48px;" alt="Jagtesh Chadha" title="Jagtesh Chadha">
+<img src="https://s.gravatar.com/avatar/30d9a3aee715cb3744e293f17edface3?s=48" style="float: left;padding: 6px 10px 0 0;width: 48px;height: 48px;" alt="Jagtesh Chadha" title="Jagtesh Chadha">
 
-<h1>Hi! I'm Jag</h1>
-<h4>I &hearts; solving real problems.</h4>
+<h1>Hi! I'm Jagtesh, a Technology Consultant based in Toronto, Canada.</h1>
+<h4>I &hearts; working with startups and solving problems.</h4>
