--- a/section/_home.html
+++ b/section/_home.html
@@ -2,5 +2,5 @@
 <img src="https://s.gravatar.com/avatar/30d9a3aee715cb3744e293f17edface3?s=48" style="float: left;padding: 6px 10px 0 0;width: 48px;height: 48px;" alt="Jagtesh Chadha" title="Jagtesh Chadha">
 
 <h1>Hi! I'm Jagtesh..</h1>
-<h4>..a Technology Consultant based in Toronto, Canada.</h4>
-<h4>I &hearts; working with startups and solving problems for business.</h4>
+<h4>..a Technology Consultant based in Toronto, Canada.</h4><br/>
+<h4>I &hearts; working with startups and solving problems for businesses.</h4>
