--- a/section/_home.html
+++ b/section/_home.html
@@ -4,4 +4,6 @@
 <h1>Hi! I'm Jagtesh..</h1>
 <h4>..a Technology Consultant based in Toronto, Canada.</h4>
 <h4>I &hearts; working with startups and solving problems for businesses.</h4>
-<h4>Does your business have a problem, or are you looking for technical expertise? <a href="mailto:contact@jagteshchadha.com">I'm available for a free consultation.</a></h4>
+<br/>
+<h4>Does your business have a problem, or are you looking for technical expertise?</h4>
+<h4><a href="mailto:contact@jagteshchadha.com">I'm available for a free consultation.</a></h4>
