--- a/section/_projects.html
+++ b/section/_projects.html
@@ -2,7 +2,7 @@
 <br/>
 
 <h3>Grep42</h3>
-<p>A freelance work search engine that is updated every 15 mins. Currently shows jobs sources from Elance and oDesk. I came up with the concept, then designed and developed it.</p>
+<p>Freelance work search engine that is updated every 15 mins. Currently shows jobs sources from Elance and oDesk.</p>
 <br/>
 
 <h3><a href="http://code.google.com/p/flickd/">FlickD!</a></h3>
@@ -10,5 +10,5 @@
 <br/>
 
 <h3><a href="http://code.google.com/p/libsmssharp/">LibSmsSharp</a></h3>
-<p>LibSmsSharp? is a .NET library written in C# which allows you to implement SMS functionality in your program. In its current state, it supports sending and receiving SMS and has a very flexible architecture allowing the feature set to be extended based on the phone-family and the AT commands supported by it.</p>
+<p>LibSmsSharp is a .NET library written in C# which allows you to implement SMS functionality in your program. In its current state, it supports sending and receiving SMS and has a very flexible architecture allowing the feature set to be extended based on the phone-family and the AT commands supported by it.</p>
 <br/>
