--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
       font-weight: 200;
       font-size: 300px;
       letter-spacing: -30px;
+      color: #666;
     }
 
     .email {
       font-family: sans-serif;
-      color: #ccc;
       letter-spacing: 10px;
       font-size: 15px;
       text-decoration: none;
       padding-bottom: 10px;
-      border-bottom: 1px solid #ccc;
     }
     </style>
   </head>
