--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="author" content="Jagtesh Chadha">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
     <style>
+    html, body {
+      position: relative;
+      height: 100%;
+    }
+
     .wrapper {
       display: flex;
       align-items: center;
