Remove margin for body

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       position: relative;
       height: 100%;
     }
+    body {
+      margin: 0;
+    }
 
     .wrapper {
       display: flex;
