--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       position: relative;
       height: 100%;
     }
+
     body {
       margin: 0;
     }
@@ -22,6 +23,11 @@
       justify-content: center;
       flex-direction: column;
       height: 100%;
+    }
+
+    .logo-wrapper {
+      padding: 0 70px 0 50px;
+      border: 10px solid;
     }
 
     .logo {
